--- a/Froggies.Web/wwwroot/index.html
+++ b/Froggies.Web/wwwroot/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Froggies.Web</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
 	
